ports over homepage animation code

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,13 @@
-<p>home works!</p>
+<div class="home-title-container">
+    <div class="home-title">
+      <span class="name">{{ name | lowercase }}</span>
+      <br />
+      <div class="marquee">
+        <span #marqueeItem class="marquee-item"></span>
+      </div>
+      <br />
+      <div>
+        <span class="location">{{ location | lowercase }}</span>
+      </div>
+    </div>
+  </div>
