--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,1 +1,21 @@
-<p>about works!</p>
+<div class="about-container">
+    <div class="about-text">
+      <div class="about-text-container">
+        <div class="about-text-header">
+          <span>welcome to my <span class="emphasis">digital</span> space</span>
+        </div>
+        <div class="about-text-content">
+          <span>
+            I am an experienced full-stack software engineer and web developer
+            with a passion for creating compelling, user-centric digital
+            experiences. I'm happy to share some of my early creative content with
+            you here. More to come!
+          </span>
+          <br />
+          <br />
+          <span class="emphasis">Enjoy!</span>
+        </div>
+      </div>
+    </div>
+  </div>
+  
